force-app/main/default/objects/Record_Sharing__mdt/Record_Sharing__mdt.object-meta.xml
<CustomObject>
    <description>Created By: Mayank Pant
Created Date: 26th Nov 2020
Purpose: This custom meta data will provide information about who all users need access on a record.</description>
    <label>Record Sharing</label>
    <pluralLabel>Record Sharings</pluralLabel>
</CustomObject>