force-app/main/default/objects/Record_Sharing__mdt/fields/After_Sales_Public_Group__c.field-meta.xml
<CustomField>
    <fullName>After_Sales_Public_Group__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 26th Nov 2020
Purpose: This field store the name of the After Sales Public group for the particular Department</description>
    <label>After Sales Public Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>