force-app/main/default/objects/Record_Sharing__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 26th Nov 2020
Purpose: This field store the name of the object.</description>
    <label>Object Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>